actualizacion del proyecto

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Inicio - JOTACE</title>
+    <meta name="Author" lang="es" content="Juan Manuel Canteros">
+    <meta name="keywords" content="Diseño - Portfolio - Audiovisual">
+    <meta name="description" content="Portfolio Personal - Juan Manuel Canteros">
+    
 </head>
 <body>
     <!-- Navbar -->
